# 2025-HAI-MOT

./: .gitignore  README.md  download_data.py  download_voc_dataset.py  hello_world  main.py  pyproject.toml  train.py  train_11n.py  train_11s.py  train_on_voc.py
datasets/: VOC.yaml  VisDrone.yaml  download_visDrone_dataset.py  download_voc_dataset.py
validations/11n-trained-100-validation/: args.yaml  results.csv
validations/11s-trained-100-validation/: args.yaml  results.csv
