[tool.poetry]
name = "mot"
version = "0.1.0"
description = ""
authors = ["roger <minseungkim1017@gmail.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python-headless = ">=4.11.0.86,<5.0.0.0"
numpy = ">=2.2.5,<3.0.0"
ultralytics = "^8.3.134"
huggingface-hub = "^0.31.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
